--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <h1>Coming Soon</h1>
-    <video width="320" height="240" controls>
-        <source src="blue.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <img src="photo_2024-06-26_15-35-10.jpg" alt="Coming Soon">
 </body>
 </html>
+
+
