--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        body {
+            background: url('photo_2024-06-26_15-35-10.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-    <h1>Coming Soon</h1>
-    <img src="photo_2024-06-26_15-35-10.jpg" alt="Coming Soon">
 </body>
 </html>
-
-
