--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         }
         .container {
             text-align: center;
-            z-index: 10;
             position: relative;
-            width: 100%;
         }
         .logo {
             width: 150px;
@@ -33,9 +31,9 @@
             white-space: nowrap;
             color: blue;
             font-size: 3em;
-            animation: moveText 5s linear forwards;
-            top: 60%; /* Adjust based on your needs */
+            top: 200px; /* Adjust based on your logo position */
             left: -100%;
+            animation: moveText 5s linear forwards;
         }
         @keyframes moveText {
             0% { left: -100%; }
