--- a/index.html
+++ b/index.html
@@ -26,25 +26,17 @@
             height: 150px;
             margin-bottom: 20px;
         }
-        .moving-text {
-            position: absolute;
-            white-space: nowrap;
+        .coming-soon {
             color: blue;
             font-size: 3em;
-            top: 200px; /* Adjust based on your logo position */
-            left: -100%;
-            animation: moveText 5s linear forwards;
-        }
-        @keyframes moveText {
-            0% { left: -100%; }
-            100% { left: 50%; transform: translateX(-50%); }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="1.jpg" alt="Logo" class="logo">
-        <h1 class="moving-text">Digital Matrix Coming Soon</h1>
+        <img src="1.jpg="Logo" class="logo">
+        <h1 class="Digital Matrix">Coming Soon</h1>
+        <h2 class="Your Partner In Digital Transformation">Coming Soon</h2>
     </div>
 </body>
 </html>
