--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="1.jpg="Logo" class="logo">
-        <h1 class="Digital Matrix">Coming Soon</h1>
-        <h2 class="Your Partner In Digital Transformation">Coming Soon</h2>
+        <img src="1.jpg" alt="Logo" class="logo">
+        <h1 class="coming-soon">Coming Soon</h1>
+        <h1 class="coming-soon">Coming Soon</h1>
+
     </div>
 </body>
 </html>
