--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             position: relative;
         }
         .logo {
-            width: 150px;
-            height: 150px;
+            width: 300px; /* Adjust the size as needed */
+            height: 300px; /* Adjust the size as needed */
             margin-bottom: 20px;
         }
         .coming-soon {
@@ -35,9 +35,8 @@
 <body>
     <div class="container">
         <img src="1.jpg" alt="Logo" class="logo">
-        <h1 class="coming-soon">Coming Soon</h1>
-        <h1 class="coming-soon">Coming Soon</h1>
-
+        <h1 class="coming-soon">Digital Matrix</h1>
+         <h3 class="coming-soon">Your Partner in Digital Transformation Coming Soon</h3>
     </div>
 </body>
 </html>
