--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             margin-bottom: 20px;
         }
         .coming-soon {
-            color: blue;
+            color: black;
             font-size: 3em;
+        }
+        .coming-soon2 {
+            color: black;
+            font-size: 1em;
         }
     </style>
 </head>
@@ -36,7 +40,7 @@
     <div class="container">
         <img src="1.jpg" alt="Logo" class="logo">
         <h1 class="coming-soon">Digital Matrix</h1>
-         <h3 class="coming-soon">Your Partner in Digital Transformation Coming Soon</h3>
+         <h3 class="coming-soon2">Your Partner in Digital Transformation Coming Soon</h3>
     </div>
 </body>
 </html>
