--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <img src="1.jpg" alt="Logo" class="logo">
         <h1 class="coming-soon">Digital Matrix</h1>
-         <h3 class="coming-soon2">Your Partner in Digital Transformation Coming Soon</h3>
+         <h3 class="coming-soon2">Your Partner in Digital Transformation</h3>
     </div>
 </body>
 </html>
