--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background: white;
+            background-image: url('bg.jpg');
         }
         .container {
             text-align: center;
