--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             align-items: center;
             overflow: hidden;
             background-image: url('bg.jpg');
+             background-size: auto;
         }
         .container {
             text-align: center;
