--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             align-items: center;
             overflow: hidden;
             background-image: url('bg.jpg');
-             background-size: auto;
+            background-size: auto;
+            background-repeat: no-repeat;
+            background-position: center;
         }
         .container {
             text-align: center;
