--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="1.jpg" alt="Logo" class="logo">
+        <img src="p.png" alt="Logo" class="logo">
         <h1 class="coming-soon">Digital Matrix</h1>
          <h3 class="coming-soon2">Your Partner in Digital Transformation</h3>
     </div>
