--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-image: url('bg.jpg');
+            background-image: url('n.jpg');
             background-size: auto;
             background-repeat: no-repeat;
             background-position: center;
@@ -37,6 +37,11 @@
             color: black;
             font-size: 1em;
         }
+ .coming-soon3 {
+            color: black;
+            font-size: 1em;
+        }
+        
     </style>
 </head>
 <body>
@@ -44,6 +49,7 @@
         <img src="p.png" alt="Logo" class="logo">
         <h1 class="coming-soon">Digital Matrix</h1>
          <h3 class="coming-soon2">Your Partner in Digital Transformation</h3>
+           <h3 class="coming-soon3">Coming Soon</h3>
     </div>
 </body>
 </html>
