--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             align-items: center;
             overflow: hidden;
             background-image: url('n.jpg');
-            background-size: auto;
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
         }
