--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            background-size: cover; /* Adjust as needed */
+            background-repeat: no-repeat;
+            background-position: center;
             background-image: url('n.jpg');
         }
         .container {
