--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-size: cover; /* Adjust as needed */
+            background-size: auto; /* Adjust as needed */
             background-repeat: no-repeat;
             background-position: center;
             background-image: url('n.jpg');
