--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-size: auto; /* Adjust as needed */
             background-repeat: no-repeat;
             background-position: center;
-            background-image: url('digi.jpg');
+            background-image: url('lol.jpg');
         }
         .container {
             text-align: center;
