--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             font-size: 1em;
         }
  .coming-soon3 {
-            color: black;
-            font-size: 3em;
+            color: green;
+            font-size: 2em;
         }
         
     </style>
