--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-size: 1em;
         }
  .coming-soon3 {
-            color: green;
+            color: 0d32c2;
             font-size: 2em;
         }
         
