--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-size: 1em;
         }
  .coming-soon3 {
-            color: 0d32c2;
+            color: #0d32c2;
             font-size: 2em;
         }
         
@@ -49,7 +49,7 @@
         <img src="p.png" alt="Logo" class="logo">
         <h1 class="coming-soon">Digital Matrix</h1>
          <h3 class="coming-soon2">Your Partner in Digital Transformation</h3>
-           <h1 class="coming-soon3">Stay Tuned</h1>
+           <h1 class="coming-soon3">Stay Tuned! Exciting Things Are Coming Soon!</h1>
     </div>
 </body>
 </html>
